fix text wrapping issue for single-series layout d/t grid columns, see https://stackoverflow.com/a/52380579/9437012

--- a/assets/scaffold.scss
+++ b/assets/scaffold.scss
@@ -212,7 +212,7 @@ form {
   @extend .w-100 ;
 
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(6, minmax(0, 1fr));
   grid-template-rows: repeat(3, auto);
   grid-auto-flow: dense;
   grid-gap: 0px;
